   	&shy; (soft-hyphen) is decoded and discarded as it is being used
   	to obfuscate URLs in junk mail.

	http://www.symantec.com/connect/blogs/soft-hyphen-new-url-obfuscation-technique

   !	kvm_sql_step: Disable pthread cancel during sqlite3_step().

   !	kvmOpen: Changed sqlite3_open() to sqlite3_open_v2() so that we
   	can pass SQLITE3_OPEN_READONLY when required.

--1.74.12--

   !	pdqPoll: Some NS hosts return REFUSED instead of SERVFAIL when
	there is a problem with the server. By ignoring REFUSED replies,
	other NS hosts have a chance to reply. If they all reply
	REFUSED, a query will time out instead. The calling application
	such as smtpf can then temp.fail instead of rejecting. Requested
	by Steve Freegard.

  !	socketTimeoutIO: Fixed timeout difference code that was altered
	when epoll and kqueue support was added (1.74.11)

--1.74.11--

   *    Upgraded SQLite to 3.7.2

   !	aclocal.m4, version.h.in.in: Added detection of epoll or kqueue related
   	headers and functions.

   !	socketTimeout(): Added support for epoll and kqueue.

--1.74.10--

   *    Upgraded SQLite to 3.7.0

   +	playfair.c/h: Modified playfair to use a Playfair data structure
	for better house keeping, similar to the Victor API.

   !	playfair.c, victor.c: Fixed bug when transforming a key
	containing spaces, would disrupt the transformation table.

   !	ixhash: Second attempt to port ixhash from the original procmail
	script and SpamAssassin plugin into an API and CLI tool. Move
	from tools to util.

   +	Add md4_digest_to_string() and md5_digest_to_string() to replace
	multiple private copies of digestToString().

   !	smdbSetDebug: Changed debug levels: 0 = off, 1 = only matches, 2 =
   	all lookups.

   !	mcc.c: Add sqlite3_clear_bindings() where required. sqlite3_reset()
   	does not clear bindings, only resets a satement's state machine.

   !	kvm.c: Add sqlite3_clear_bindings() where required. sqlite3_reset()