@@ -36,11 +36,15 @@ int
 fileSetPermsById(int fd, uid_t uid, gid_t gid, mode_t mode)
 {
 #ifdef __unix__
-	if (geteuid() == 0 && fchown(fd, uid, gid) && errno != ENOENT)
+	if (fchown(fd, uid, gid) && errno != ENOENT) {
+		syslog(LOG_ERR, "uid=%d fchown(%d, %d, %d) error: %s (%d)", getuid(), fd, uid, gid, strerror(errno), errno);
 		return -1;
+	}
 
-	if (fchmod(fd, mode))
+	if (fchmod(fd, mode)) {
+		syslog(LOG_ERR, "fchmod(%d, %o) error: %s (%d)", fd, mode, strerror(errno), errno);
 		return -2;
+	}
 #endif
 	return 0;
 }
@@ -49,11 +53,15 @@ int
 pathSetPermsById(const char *path, uid_t uid, gid_t gid, mode_t mode)
 {
 #ifdef __unix__
-	if (geteuid() == 0 && chown(path, uid, gid) && errno != ENOENT)
+	if (chown(path, uid, gid) && errno != ENOENT) {
+		syslog(LOG_ERR, "uid=%d chown(\"%s\", %d, %d) error: %s (%d)", getuid(), path, uid, gid, strerror(errno), errno);
 		return -1;
+	}
 
-	if (chmod(path, mode))
+	if (chmod(path, mode)) {
+		syslog(LOG_ERR, "chmod(\"%s\", %o) error: %s (%d)", path, mode, strerror(errno), errno);
 		return -2;
+	}
 #endif
 	return 0;
 }
@@ -75,8 +83,8 @@ fileSetPermsByName(int fd, const char *user, const char *group, mode_t mode)
 		return -1;
 	}
 
-	if (geteuid() == 0 && fchown(fd, pw->pw_uid, gr->gr_gid) && errno != ENOENT) {
-		syslog(LOG_ERR, "fchown(%d, \"%s\", \"%s\") error: %s (%d)", fd, user, group, strerror(errno), errno);
+	if (fchown(fd, pw->pw_uid, gr->gr_gid) && errno != ENOENT) {
+		syslog(LOG_ERR, "uid=%d fchown(%d, \"%s\", \"%s\") error: %s (%d)", getuid(), fd, user, group, strerror(errno), errno);
 		return -1;
 	}
 
@@ -105,8 +113,8 @@ pathSetPermsByName(const char *path, const char *user, const char *group, mode_t
 		return -1;
 	}
 
-	if (geteuid() == 0 && chown(path, pw->pw_uid, gr->gr_gid) && errno != ENOENT) {
-		syslog(LOG_ERR, "chown(\"%s\", \"%s\", \"%s\") error: %s (%d)", path, user, group, strerror(errno), errno);
+	if (chown(path, pw->pw_uid, gr->gr_gid) && errno != ENOENT) {
+		syslog(LOG_ERR, "uid=%d chown(\"%s\", \"%s\", \"%s\") error: %s (%d)", getuid(), path, user, group, strerror(errno), errno);
 		return -1;
 	}
 
